--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
     "gulp-sass": "^4.0.2",
     "rimraf": "^2.6.3",
     "sass": "^1.16.1"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^8.0.0"
   }
 }
